unified_tests/functions/never_return_return_type_mismatch/expect/build.text.stderr
lib.copp:2:12: error: return type mismatch: expected never, got nil
      return nil
             ^
